--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
       <div class="services-card">
         <div class="services-card-title">
-          <h3>Countryside Stewardship</h3>
+          <h3>Agri-Environment Schemes</h3>
         </div>
 
         <div class="services-card-img">
@@ -188,28 +188,22 @@
           <div class="services-options">
 
             <div class="services-subtitle">
-              <h4 class="services-link">Pre-entry Countryside Stewardship Farm Review</h4>
+              <h4 class="services-link">Pre-entry Farm Review</h4>
               <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
             <div class="services-description hidden">
-              <p>An initial visit to your farm to discuss the Countryside
-                Stewardship scheme requirements, priorities for your area and to identify potential options that you may
-                like
-                to consider in your application. A short report will be produced to help inform your future application.
+              <p>An initial visit to your farm to discuss the different scheme requirements, priorities for your area and to identify potential options that you may like to consider in your application. A short report will be produced to help inform your future application.
               </p>
             </div>
           </div>
 
           <div class="services-options">
             <div class="services-subtitle">
-              <h4 class="services-link">Mid Tier, Higher Tier and Capital Grant Applications</h4>
+              <h4 class="services-link">SFI, Countryside Stewardship  and Capital Grant Applications</h4>
               <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
             <div class="services-description hidden">
-              <p>With over 10 years in undertaking successful
-                agri-environment scheme applications, I will work with you to design an application that meets the
-                priorities for the area. Maximising your chances of a successful agreement, while working with the
-                requirements of your farm business.</p>
+              <p>With over 12 years in undertaking successful agri-environment scheme applications, I will work with you to design an application that meets the priorities for the area. Maximising your chances of a successful agreement, while working with the requirements of your farm business.</p>
             </div>
           </div>
 
@@ -219,26 +213,18 @@
               <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
             <div class="services-description hidden">
-              <p>If you prefer to carry out your own application we provide an
-                application
-                check service, ensuring the forms
-                have been completed as required and advising on whether the options chosen fit with the
-                Countryside Stewardship priorities for the area, maximising your chances of a successful application.
+              <p>If you prefer to carry out your own application I provide an application check service, ensuring the forms have been completed as required and advising on whether the options chosen fit with the priorities for the area, maximising your chances of a successful application.
               </p>
             </div>
           </div>
 
           <div class="services-options">
             <div class="services-subtitle">
-              <h4 class="services-link">Stewardship Scheme MOT</h4>
+              <h4 class="services-link">Stewardship/SFI MOT</h4>
               <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
             <div class="services-description hidden">
-              <p>Helping you to ensure you are meeting the requirements of your ELS,
-                OELS,
-                HLS or Countryside Stewardship
-                scheme. Providing reassurance on compliance with the regulatory requirements together
-                with advice on how to maximise the environmental benefits of your scheme.</p>
+              <p>Helping you to ensure you are meeting the requirements of your Countryside Stewardship or SFI agreement. Providing reassurance on compliance with the regulatory requirements together with advice on how to maximise the environmental benefits of your scheme.</p>
             </div>
           </div>
 
@@ -263,18 +249,9 @@
             </div>
 
             <div class="services-description hidden">
-              <p>From Mid Tier to Higher Tier, Capital Grants and Woodland Support
-                Grants,
-                through to Farming in Protected
-                Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
+              <p>From SFI, Countryside Stewardship Mid Tier to Higher Tier, Capital Grants and Woodland Support Grants, through to Farming in Protected Landscapes, Farming Investment Fund, Water Company grant schemes.</p>
 
-              <p>With over 10 years experience in undertaking successful
-                agri-environment
-                scheme
-                applications as well
-                as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes,
-                I can advise you on funding opportunities available, help you to decide what is right for your farm and
-                assist from application to delivery.
+              <p>With over 10 years of experience in undertaking successful agri-environment scheme applications as well as working with Catchment Sensitive Farming and Water Companies to implement and deliver grant schemes, I can advise you on funding opportunities available, help you to decide what is right for your farm and assist from application to delivery.
               </p>
             </div>
 
@@ -295,9 +272,7 @@
           <div class="services-options">
 
             <div class="services-subtitle">
-              <h4 class="services-link">Provide advice on diffuse pollution and resource protection including the soil
-                management requirements under
-                Cross Compliance.</h4>
+              <h4 class="services-link">Provide advice on diffuse pollution and resource protection including compliance with the Farming Rules for Water.</h4>
               <!-- <h4 class="services-btn">+</h4> -->
 
               <!-- <p class="services-description"></p> -->
@@ -319,8 +294,7 @@
 
           <div class="services-options">
             <div class="services-subtitle">
-              <h4 class="services-link">Experienced in arranging and delivering training and workshops on a range of
-                topics.</h4>
+              <h4 class="services-link">Experienced in arranging and delivering training and workshops on a range of topics both independently and on behalf of organisations, water companies and Catchment Sensitive Farming.</h4>
               <h4 class="services-btn"><i class="fa-solid fa-plus expand-icon"></i></h4>
             </div>
             <div class="services-description hidden">
@@ -328,11 +302,11 @@
               <ul>
                 <li>hedgerow management</li>
                 <li>soil management</li>
-                <li>NVZ and Cross Compliance update</li>
-                <li>biobeds</li>
-                <li>equine management</li>
+                <li>biobeds and pesticide handling</li>
+                <li>equine pasture management</li>
                 <li>farm pollinators</li>
-                <li>slug control</li>
+                <li>integrated Pest Management</li>
+                <li>trees on Farms</li>
               </ul>
             </div>
 
